cros: Fix keyboard navigation focus get lost when system tray set to invisible on oobe

Changes:
(1) add tray->visible() check in WebUILoginView::TakeFocus().
(2) add else branch to avoid an invisible focus stop.

BUG=707977
TEST=test that focus loop works

Review-Url: https://codereview.chromium.org/2794153002
Cr-Commit-Position: refs/heads/master@{#461741}

Former-commit-id: 43c00b6dfca02767efa66d7fb110c7cbf28bc019